// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hub.hub_code is truthy 1`] = `
<div
  className="flex-100 layout-row route_result"
>
  <div
    className="flex-100 layout-row layout-wrap"
  >
    <div
      className="flex-40 layout-row layout-align-start-center top_row"
    >
      <div
        className="flex-20 layout-row layout-align-center-center"
      >
        <i
          className="fa fa-ship"
        />
      </div>
      <div
        className="flex-80 header_hub"
      >
        <div
          className="flex-100 layout-row"
        >
          <h4
            className="flex-100"
          >
             
             
          </h4>
        </div>
        <div
          className="flex-100"
        >
          <p
            className="flex-100"
          >
             
            HUB_CODE
             
          </p>
        </div>
      </div>
    </div>
    <div
      className="flex-60 layout-row layout-align-start-center"
    >
      <div
        className="flex-33 layout-wrap layout-row layout-align-center-center"
      />
      <div
        className="flex-33 layout-wrap layout-row layout-align-center-center"
      >
        <div
          className="flex-100 layout-row"
        >
          <h4
            className="date_title"
            style={
              Object {
                "background": "-webkit-linear-gradient(-90deg, undefined,undefined)",
              }
            }
          >
             
            Date of Arrival
          </h4>
        </div>
        <div
          className="flex-100 layout-row"
        >
          <p
            className="flex-none sched_elem"
          >
             
            Invalid date
             
          </p>
          <p
            className="flex-none sched_elem"
          >
             
            Invalid date
             
          </p>
        </div>
      </div>
      <div
        className="flex-33 layout-wrap layout-row layout-align-center-center"
      >
        <div
          className="flex-100 layout-row"
        >
          <h4
            className="date_title"
            style={
              Object {
                "background": "-webkit-linear-gradient(-90deg, undefined,undefined)",
              }
            }
          >
             
            Date of Departure :
          </h4>
        </div>
        <div
          className="flex-100 layout-row"
        >
          <p
            className="flex-none sched_elem"
          >
             
            Invalid date
             
          </p>
          <p
            className="flex-none sched_elem"
          >
             
            Invalid date
             
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`schedule is falsy 1`] = `""`;

exports[`schedule.eta schedule.etd are falsy 1`] = `
<div
  className="flex-100 layout-row route_result"
>
  <div
    className="flex-100 layout-row layout-wrap"
  >
    <div
      className="flex-40 layout-row layout-align-start-center top_row"
    >
      <div
        className="flex-20 layout-row layout-align-center-center"
      >
        <i
          className="fa fa-ship"
        />
      </div>
      <div
        className="flex-80 header_hub"
      >
        <div
          className="flex-100 layout-row"
        >
          <h4
            className="flex-100"
          >
             
             
          </h4>
        </div>
        <div
          className="flex-100"
        >
          <p
            className="flex-100"
          >
             
             
          </p>
        </div>
      </div>
    </div>
    <div
      className="flex-60 layout-row layout-align-start-center"
    >
      <div
        className="flex-33 layout-wrap layout-row layout-align-center-center"
      />
      <div
        className="flex-33 layout-wrap layout-row layout-align-center-center"
      >
        <div
          className="flex-100 layout-row"
        >
          <h4
            className="date_title"
            style={
              Object {
                "background": "-webkit-linear-gradient(-90deg, undefined,undefined)",
              }
            }
          >
             
            Date of Arrival
          </h4>
        </div>
        <div
          className="flex-100 layout-row"
        >
          <p
            className="flex-none sched_elem"
          >
             
            Invalid date
             
          </p>
          <p
            className="flex-none sched_elem"
          >
             
            Invalid date
             
          </p>
        </div>
      </div>
      <div
        className="flex-33 layout-wrap layout-row layout-align-center-center"
      >
        <div
          className="flex-100 layout-row"
        >
          <h4
            className="date_title"
            style={
              Object {
                "background": "-webkit-linear-gradient(-90deg, undefined,undefined)",
              }
            }
          >
             
            Date of Departure :
          </h4>
        </div>
        <div
          className="flex-100 layout-row"
        >
          <p
            className="flex-none sched_elem"
          >
             
            Invalid date
             
          </p>
          <p
            className="flex-none sched_elem"
          >
             
            Invalid date
             
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`shallow render 1`] = `
<div
  className="flex-100 layout-row route_result"
>
  <div
    className="flex-100 layout-row layout-wrap"
  >
    <div
      className="flex-40 layout-row layout-align-start-center top_row"
    >
      <div
        className="flex-20 layout-row layout-align-center-center"
      >
        <i
          className="fa fa-ship"
        />
      </div>
      <div
        className="flex-80 header_hub"
      >
        <div
          className="flex-100 layout-row"
        >
          <h4
            className="flex-100"
          >
             
             
          </h4>
        </div>
        <div
          className="flex-100"
        >
          <p
            className="flex-100"
          >
             
             
          </p>
        </div>
      </div>
    </div>
    <div
      className="flex-60 layout-row layout-align-start-center"
    >
      <div
        className="flex-33 layout-wrap layout-row layout-align-center-center"
      />
      <div
        className="flex-33 layout-wrap layout-row layout-align-center-center"
      >
        <div
          className="flex-100 layout-row"
        >
          <h4
            className="date_title"
            style={
              Object {
                "background": "-webkit-linear-gradient(-90deg, undefined,undefined)",
              }
            }
          >
             
            Date of Arrival
          </h4>
        </div>
        <div
          className="flex-100 layout-row"
        >
          <p
            className="flex-none sched_elem"
          >
             
            Invalid date
             
          </p>
          <p
            className="flex-none sched_elem"
          >
             
            Invalid date
             
          </p>
        </div>
      </div>
      <div
        className="flex-33 layout-wrap layout-row layout-align-center-center"
      >
        <div
          className="flex-100 layout-row"
        >
          <h4
            className="date_title"
            style={
              Object {
                "background": "-webkit-linear-gradient(-90deg, undefined,undefined)",
              }
            }
          >
             
            Date of Departure :
          </h4>
        </div>
        <div
          className="flex-100 layout-row"
        >
          <p
            className="flex-none sched_elem"
          >
             
            Invalid date
             
          </p>
          <p
            className="flex-none sched_elem"
          >
             
            Invalid date
             
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`theme is falsy 1`] = `
<div
  className="flex-100 layout-row route_result"
>
  <div
    className="flex-100 layout-row layout-wrap"
  >
    <div
      className="flex-40 layout-row layout-align-start-center top_row"
    >
      <div
        className="flex-20 layout-row layout-align-center-center"
      >
        <i
          className="fa fa-ship"
        />
      </div>
      <div
        className="flex-80 header_hub"
      >
        <div
          className="flex-100 layout-row"
        >
          <h4
            className="flex-100"
          >
             
             
          </h4>
        </div>
        <div
          className="flex-100"
        >
          <p
            className="flex-100"
          >
             
             
          </p>
        </div>
      </div>
    </div>
    <div
      className="flex-60 layout-row layout-align-start-center"
    >
      <div
        className="flex-33 layout-wrap layout-row layout-align-center-center"
      />
      <div
        className="flex-33 layout-wrap layout-row layout-align-center-center"
      >
        <div
          className="flex-100 layout-row"
        >
          <h4
            className="date_title"
            style={
              Object {
                "color": "black",
              }
            }
          >
             
            Date of Arrival
          </h4>
        </div>
        <div
          className="flex-100 layout-row"
        >
          <p
            className="flex-none sched_elem"
          >
             
            Invalid date
             
          </p>
          <p
            className="flex-none sched_elem"
          >
             
            Invalid date
             
          </p>
        </div>
      </div>
      <div
        className="flex-33 layout-wrap layout-row layout-align-center-center"
      >
        <div
          className="flex-100 layout-row"
        >
          <h4
            className="date_title"
            style={
              Object {
                "color": "black",
              }
            }
          >
             
            Date of Departure :
          </h4>
        </div>
        <div
          className="flex-100 layout-row"
        >
          <p
            className="flex-none sched_elem"
          >
             
            Invalid date
             
          </p>
          <p
            className="flex-none sched_elem"
          >
             
            Invalid date
             
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
